src/tui/widgets/popups/error/snapshots/rmcl__tui__widgets__popups__error__render_tests__narrow_frame_renders.snap
---
source: src/tui/widgets/popups/error/render_tests.rs
expression: term.backend()
---
"╭ WARN ──────────╮"
"│Short message   │"
"│                │"
"│                │"
"╰────────────────╯"
